--- a/index.ipynb
+++ b/index.ipynb
@@ -183,9 +183,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-4-f00048a532e4>, line 10)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-f00048a532e4>\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31m    # Mean Difference: 1.1377888781920937\u001b[0m\n\u001b[0m                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(23)\n",
     "\n",
@@ -194,7 +203,7 @@
     "sample_mean = sample.mean()  # Calculate sample mean \n",
     "\n",
     "# Print sample mean and difference of sample and population mean \n",
-    "\"Sample Mean is {} and Mean Difference is: \". format(sample_mean, )\n",
+    "\"Sample Mean is {} and Mean Difference is: \". format(sample_mean, (sample_mean - population_ages.mean())\n",
     "# Sample Mean: 19.870788629471857\n",
     "# Mean Difference: 1.1377888781920937"
    ]
