automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -183,16 +183,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-5-7c359ff7ff56>, line 10)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-7c359ff7ff56>\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31m    # Mean Difference: 1.1377888781920937\u001b[0m\n\u001b[0m                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'Sample Mean is 19.870788629471857 and Mean Difference is: 1.1377888781920937'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -201,9 +203,9 @@
     "sample_size = 25\n",
     "sample = np.random.choice(a = population_ages, size = 25) # Take a random sample of size 25 from above population\n",
     "sample_mean = sample.mean()  # Calculate sample mean \n",
-    "mean_diff = sample_mean - population_ages.mean()\n",
+    "mean_diff = population_ages.mean() - sample_mean\n",
     "# Print sample mean and difference of sample and population mean \n",
-    "\"Sample Mean is {} and Mean Difference is: \".format(sample_mean, mean\n",
+    "\"Sample Mean is {} and Mean Difference is: {}\".format(sample_mean, mean_diff)\n",
     "# Sample Mean: 19.870788629471857\n",
     "# Mean Difference: 1.1377888781920937"
    ]
