--- a/index.ipynb
+++ b/index.ipynb
@@ -221,21 +221,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "t-critical value:\n"
+      "t-critical value: 2.0638985616280205\n"
      ]
     }
    ],
    "source": [
     "# Cal culate the t-critical value for 95% confidence level for sample taken above. \n",
     "t_critical = stats.t.ppf(0.975, sample_size - 1)   # Get the t-critical value  by using 95% confidence level and degree of freedom\n",
-    "print(\"t-critical value:\")                  # Check the t-critical value\n",
+    "print(\"t-critical value:\", str(t_critical))                  # Check the t-critical value\n",
     "#print(t_critical)     \n",
     "\n",
     "# t-critical value:\n",
