--- a/index.ipynb
+++ b/index.ipynb
@@ -269,10 +269,10 @@
     "sigma = sample_stdev / (sample_size)**0.5\n",
     "\n",
     "# Calculate margin of error using t_critical and sigma\n",
-    "margin_of_error = t_critical*si\n",
+    "margin_of_error = t_critical*sigma\n",
     "\n",
     "# Calculate the confidence intervals using calculated margin of error \n",
-    "confidence_interval = None\n",
+    "confidence_interval = (sample.mean() - margin_of_error, )\n",
     "\n",
     "\n",
     "print(\"Confidence interval:\")\n",
