automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -258,9 +258,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-12-72d300c0b5c5>, line 14)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-72d300c0b5c5>\"\u001b[0;36m, line \u001b[0;32m14\u001b[0m\n\u001b[0;31m    print(\"Confidence interval:\" confidence_interval)\u001b[0m\n\u001b[0m                                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculate the sample standard deviation\n",
     "sample_stdev = sample.std()    # Get the sample standard deviation\n",
@@ -272,10 +281,10 @@
     "margin_of_error = t_critical*sigma\n",
     "\n",
     "# Calculate the confidence intervals using calculated margin of error \n",
-    "confidence_interval = (sample.mean() - margin_of_error, )\n",
+    "confidence_interval = (sample.mean() - margin_of_error, sample.mean() + margin_of_error)\n",
     "\n",
     "\n",
-    "print(\"Confidence interval:\")\n",
+    "print(\"Confidence interval:\" confidence_interval)\n",
     "#print(confidence_interval)\n",
     "\n",
     "# Confidence interval:\n",
