automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -258,15 +258,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-12-72d300c0b5c5>, line 14)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-72d300c0b5c5>\"\u001b[0;36m, line \u001b[0;32m14\u001b[0m\n\u001b[0;31m    print(\"Confidence interval:\" confidence_interval)\u001b[0m\n\u001b[0m                                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confidence interval: (18.4609156900928, 21.280661568850913)\n"
      ]
     }
    ],
@@ -284,7 +283,7 @@
     "confidence_interval = (sample.mean() - margin_of_error, sample.mean() + margin_of_error)\n",
     "\n",
     "\n",
-    "print(\"Confidence interval:\" confidence_interval)\n",
+    "print(\"Confidence interval:\", confidence_interval)\n",
     "#print(confidence_interval)\n",
     "\n",
     "# Confidence interval:\n",
@@ -300,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +308,7 @@
        "(18.4609156900928, 21.280661568850913)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
