automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
        "(18.4609156900928, 21.280661568850913)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +350,7 @@
     "    # Note that we use stats.t.ppf with q = 0.975 to get the desired t-critical value \n",
     "    # instead of q = 0.95 because the distribution has two tails.\n",
     "\n",
-    "    t = None  #  t-critical value for 95% confidence\n",
+    "    t = stats.t.ppf()  #  t-critical value for 95% confidence\n",
     "    \n",
     "    sigma = None # Sample standard deviation\n",
     "\n",
