--- a/index.ipynb
+++ b/index.ipynb
@@ -352,10 +352,10 @@
     "\n",
     "    t = stats.t.ppf(0.975, n-1)  #  t-critical value for 95% confidence\n",
     "    \n",
-    "    sigma = None # Sample standard deviation\n",
+    "    sigma = x_hat/(n**0.5) # Sample standard deviation\n",
     "\n",
     "    # Calculate the margin of error using formula given above\n",
-    "    moe = None\n",
+    "    moe = t*sigma\n",
     "\n",
     "    # Calculate the confidence interval by applying margin of error to sample mean \n",
     "    # (mean - margin of error, mean+ margin of error)\n",
