--- a/index.ipynb
+++ b/index.ipynb
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
     "    # (mean - margin of error, mean+ margin of error)\n",
     "    conf = (x_hat - moe, x_hat + moe)\n",
     "    \n",
-    "    return conf"
+    "    return conf, x_hat"
    ]
   },
   {
