automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -373,9 +373,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-25-11ce1238b635>, line 21)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-25-11ce1238b635>\"\u001b[0;36m, line \u001b[0;32m21\u001b[0m\n\u001b[0;31m    # Calculate and append sample means and conf intervals for each iteration\u001b[0m\n\u001b[0m                                                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "source": [
     "# set random seed for reproducability\n",
     "np.random.seed(12)\n",
@@ -390,6 +399,7 @@
     "# Run a for loop for sampling 25 times and calculate + store confidence interval and sample mean values in lists initialised above\n",
     "\n",
     "for sample in range(25):\n",
+    "    sample = np.random.choice()\n",
     "\n",
     "    # Take a random sample of chosen size \n",
     "    \n",
