--- a/index.ipynb
+++ b/index.ipynb
@@ -399,7 +399,7 @@
     "# Run a for loop for sampling 25 times and calculate + store confidence interval and sample mean values in lists initialised above\n",
     "\n",
     "for sample in range(25):\n",
-    "    sample = np.random.choice()\n",
+    "    sample = np.random.choice(a = ,size = 25)\n",
     "\n",
     "    # Take a random sample of chosen size \n",
     "    \n",
