automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -405,7 +405,8 @@
     "    sample = np.random.choice(a = ,size = 25)\n",
     "    \n",
     "    # Calculate sample mean and confidence_interval\n",
-    "   x_\n",
+    "    x_hat = sample.mean()\n",
+    "    t = stats.tppf(0.975, sample_)\n",
     "  \n",
     "    # Calculate and append sample means and conf intervals for each iteration\n",
     "\n"
