automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -406,10 +406,10 @@
     "    \n",
     "    # Calculate sample mean and confidence_interval\n",
     "    x_hat = sample.mean()\n",
-    "    t = stats.tppf(0.975, sample_)\n",
+    "    t = stats.tppf(0.975, sample_size - 1)\n",
     "  \n",
     "    # Calculate and append sample means and conf intervals for each iteration\n",
-    "\n"
+    "    intervals.append()\n"
    ]
   },
   {
