automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -407,7 +407,8 @@
     "    # Calculate sample mean and confidence_interval\n",
     "    x_hat = sample.mean()\n",
     "    t = stats.tppf(0.975, sample_size - 1)\n",
-    "  \n",
+    "    sigma = x_hat/(n**0.5)\n",
+    "    \n",
     "    # Calculate and append sample means and conf intervals for each iteration\n",
     "    intervals.append()\n"
    ]
