--- a/index.ipynb
+++ b/index.ipynb
@@ -402,13 +402,13 @@
     "    \n",
     "\n",
     "    # Take a random sample of chosen size \n",
-    "    sample = np.random.choice(a = ,size = 25)\n",
+    "    sample = np.random.choice( ,size = 25)\n",
     "    \n",
     "    # Calculate sample mean and confidence_interval\n",
     "    x_hat = sample.mean()\n",
     "    t = stats.tppf(0.975, sample_size - 1)\n",
     "    sigma = x_hat/(n**0.5)\n",
-    "    \n",
+    "    moe = t*sigma\n",
     "    # Calculate and append sample means and conf intervals for each iteration\n",
     "    intervals.append()\n"
    ]
