automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -402,15 +402,17 @@
     "    \n",
     "\n",
     "    # Take a random sample of chosen size \n",
-    "    sample = np.random.choice( ,size = 25)\n",
+    "    sample = np.random.choice(population_ages, size = 25)\n",
     "    \n",
     "    # Calculate sample mean and confidence_interval\n",
     "    x_hat = sample.mean()\n",
     "    t = stats.tppf(0.975, sample_size - 1)\n",
     "    sigma = x_hat/(n**0.5)\n",
     "    moe = t*sigma\n",
+    "    conf = (x_hat - moe, x_hat + moe)\n",
     "    # Calculate and append sample means and conf intervals for each iteration\n",
-    "    intervals.append()\n"
+    "    intervals.append(conf)\n",
+    "    \n"
    ]
   },
   {
