automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -447,6 +447,7 @@
     "\n",
     "# Draw the mean and confidence interval for each sample\n",
     "plt.errorbar(x=np.arange(0.1, 25, 1), \n",
+    "             ymin=0, ymax =\n",
     "             y=sample_means, \n",
     "             yerr=[(top-bot)/2 for top,bot in intervals],\n",
     "             fmt='o',\n",
