--- a/index.ipynb
+++ b/index.ipynb
@@ -415,16 +415,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.LineCollection at 0x7f62c22ac0f0>"
+       "<matplotlib.collections.LineCollection at 0x7f62c2a13390>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -447,7 +447,6 @@
     "\n",
     "# Draw the mean and confidence interval for each sample\n",
     "plt.errorbar(x=np.arange(0.1, 25, 1), \n",
-    "             ymin=0, ymax =\n",
     "             y=sample_means, \n",
     "             yerr=[(top-bot)/2 for top,bot in intervals],\n",
     "             fmt='o',\n",
